--- a/운영체제/02.System structure & Program Execution.md
+++ b/운영체제/02.System structure & Program Execution.md
@@ -80,5 +80,35 @@
 ## 저장장치 계층 구조
 ![](./struct.png)
 
+## 프로그램의 실행 (메모리 load)
+![](./memory_load.png)
 
-	
+- **프로그램**은 파일 시스템에 파일 형태로 저장되어 있다.
+- 프로그램을 실행 시키면, 메모리에 올라가서 **프로세스**가 된다.
+- 메모리에는 운영체제의 커널이 기본적으로 올라가있으며, 프로세스는 사용자가 실행시킬 때 올라간다.
+- 프로그램이 실행 될 때는 Virtual Memory 가 만들어 진다. (0번지 부터 시작하는 각 프로세스들만의 주소)
+
+- 당장 필요한 부분은 물리적인 메모리에 올라가고, 그렇지 않은 부분 Swap area에 내려가 있다. 일부는 파일 시스템에 실행 파일 형태로 존재하게 된다.
+- 논리적은 주소/물리적인 주소 간에는 Adress translation 이 필요하다.
+
+### 프로세스
+- 각각의 virtual memory는 code/data/stack으로 구성된다.
+- code: 기계어 코드
+- data: 프로그램이 실행될 때 사용하는 memory data (전역변수, 프로그램이 실행될 때부터 종료될 때까지 남아있는 Data)
+- stack: 함수 호출/리턴과 관련된 정보 등을 담고 있다.
+
+## 커널 주소 공간의 내용
+![](./kernel.png)
+- 커널도 하나의 프로그램으로서 함수 구조로 되어있다 = 커널도 code/data/stack구조로된 virtual memory가 있다.
+
+## 사용자 프로그램이 사용하는 함수
+**함수 (function)**
+
+- 사용자 정의 함수
+	- 자신의 프로그램에서 정의한 함수
+- 라이브러리 함수
+	- 자신의 프로그램에서 정의하지 않고 갖다 쓴 함수
+	- 자신의 프로그램의 실팽 파일에 포함되어 있다.
+- 커널 함수
+	- 운영체제 프로그램의 함수
+	- 커널 함수의 호출 = 시스템 콜
