--- a/CS50/2.알고리즘.md
+++ b/CS50/2.알고리즘.md
@@ -25,3 +25,26 @@ Else if 50 < middle item
 Else if 50 > middle item
 	Search right half
 ```
+
+-
+
+## 2) 알고리즘 표기법
+### Big O 표기법
+	* 실행 시간의 상한
+	* O는 ‘on the order of’의 약자로, ‘~만큼의 정도로 커지는 것’이라고 볼 수 있다.
+	* O(n/2)도 결국 n이 커지면 1/2은 큰 의미가 없어지므로, O(n)이라고 볼 수 있다.
+
+> - O(n^2)  
+> - O(n log n)  
+> - O(n) : 선형 검색  
+> - O(log n) : 이진 검색  
+> - O(1)  
+
+### Big Ω
+	* 알고리즘 실행 시간의 하한
+
+> Ω(n^2)  
+> Ω(n log n)  
+> Ω(n) : 배열 안에 존재하는 값의 개수 세기  
+> Ω(log n)  
+> Ω(1) : 선형 검색, 이진 검색  
