:memo: CS50 - 선형 검색

--- a/CS50/2.알고리즘.md
+++ b/CS50/2.알고리즘.md
@@ -48,3 +48,11 @@ Else if 50 > middle item
 > Ω(n) : 배열 안에 존재하는 값의 개수 세기  
 > Ω(log n)  
 > Ω(1) : 선형 검색, 이진 검색  
+
+## 3) 선형 검색
+	* 원하는 원소가 발견될 때까지 처음부터 마지막 자료까지 차례대로 검색하는 알고리즘
+	* 정확하지만 아주 효율적이지 못한 방법이다. 리스트의 길이가 n이라고 했을 때, 최악의 경우 리스트의 모든 원소를 확인해야 하기 때문에 n번만큼 실행된다.
+	* 평균적으로 선형 검색이 최악의 상횡에서 종료되는 것에 가깝다고 가정할 수 있다.
+	* 자료가 정렬되어 있지 않거나, 그 어떤 정보도 없어 하나씩 찾아야 하는 경우에 유용
+
+> 정렬은 시간이 오래 걸리고 공간을 더 차지하나, 여러 번 리스트를 검색해야 하거나 매우 큰 리스트를 검색해야하는 경우 시간을 단축시킬 수 있다.  
