:memo: CS50 - 버블정렬

--- a/CS50/2.알고리즘.md
+++ b/CS50/2.알고리즘.md
@@ -56,3 +56,18 @@ Else if 50 > middle item
 	* 자료가 정렬되어 있지 않거나, 그 어떤 정보도 없어 하나씩 찾아야 하는 경우에 유용
 
 > 정렬은 시간이 오래 걸리고 공간을 더 차지하나, 여러 번 리스트를 검색해야 하거나 매우 큰 리스트를 검색해야하는 경우 시간을 단축시킬 수 있다.  
+
+## 4) 버블 정렬
+	* 정렬 알고리즘 중 하나
+	* 두 개의 인접한 자료 값을 비교하면서 위치를 교환하는 방식으로 정렬하는 방법
+	* 이는 단 두 개의 요소만 정렬해주는 좁은 범위의 정렬에 집중한다. 간단하지만, 단 하나의 요소를 정렬하기 위해 너무 많이 교환하는 낭비가 발생할 수도 있다.
+
+```
+Repeat n-1 times
+	For i from n-2
+		If i'th and i+1'th elements out of order
+			Swap them
+```
+
+	* 실생 시간의 상한은 O(n^2) 이다.
+	* 정렬 여부와 관계없이 루프를 돌며 비교를 해야하기 때문에, 실행시간의 하한도 Ω(n^2) 이다.
