:memo: CS50 - 선택정렬

--- a/CS50/2.알고리즘.md
+++ b/CS50/2.알고리즘.md
@@ -71,3 +71,18 @@ Repeat n-1 times
 
 	* 실생 시간의 상한은 O(n^2) 이다.
 	* 정렬 여부와 관계없이 루프를 돌며 비교를 해야하기 때문에, 실행시간의 하한도 Ω(n^2) 이다.
+
+## 5) 선택 정렬
+	* 정렬을 위한 알고리즘 중 하나
+	* 배열 안의 자료 중 가장 작은 수(혹은 가장 큰 수)를 찾아 첫 번째 위치(혹은 가장 마지막 위치)의 수와 교환해주는 방식
+	* 교환 횟수를 최소화하는 반면 각 자료를 비교하는 횟수는 증가한다.
+
+```
+For i from to n - 1
+	Find smallest item between i'th item and last item
+	Swap smallest item with i'th item
+```
+
+	* 소요 시간의 상한은 O(n^2) 이며, 하한도 마찬가지로 Ω(n^2) 이다.
+
+> n(n + 1) / 2  
