:memo: [OS] 05. 스케쥴링 기본 알고리즘 기본(우선순위 기반, Round Robin)

--- a/CS/OS/05. 스케쥴링 알고리즘 기본.md
+++ b/CS/OS/05. 스케쥴링 알고리즘 기본.md
@@ -22,3 +22,27 @@
 ## 최단 작업 우선(SJF) 스케쥴러
 * SFJ(Shortest Job First) 스케쥴러
 * 가장 실행 시간이 짧은 프로세스부터 먼저 실행시키는 알고리즘
+
+- - - -
+
+## 우선순위 기반(Priority-Based) 스케쥴러
+* 정적 우선순위 : 프로세스마다 우선순위를 미리 지정
+* 동적 우선순위 : 스케쥴러가 상황에 따라 우선순위를 동적으로 변경
+
+- - - -
+
+## Round Robin 스케쥴러
+* 시분할 시스템 기반
+
+![](images/05_02.png)
+
+---
+
+> RealTile OS(RTOS) : 응용 프로그램 실시간 성능 보장을 목표로 하는 OS  
+> - 프로그램 시작/완료 시간을 보장  
+> - 시간에 민감한 프로세스들이 동작해야하는 상황에서 사용  
+> - Hardware RTOS, Software RTOS  
+
+> General Purpose OS (GPOS)  
+> - 프로세스 실행시간에 민감하지 않고, 일반적인 목적으로 사용되는 OS  
+> Ex) Windows, Linux 등 ..  
