:memo: [OS] 04. 프로세스 상태 기반 기본적인 스케쥴링 알고리즘(Queue)

--- a/CS/OS/04. 프로세스와 스케줄러의 이해.md
+++ b/CS/OS/04. 프로세스와 스케줄러의 이해.md
@@ -93,3 +93,11 @@
 2. Scheduler picks another process
 3. Scheduler picks this process
 4. Process becomes available
+
+---
+
+## 프로세스 상태 기반 기본적인 스케쥴링 알고리즘
+
+* Ready State Queue
+* Running State Queue
+* Block State Queue
