:memo: [OS] 04. 선점형과 비선점형 스케쥴러

--- a/CS/OS/04. 프로세스와 스케줄러의 이해.md
+++ b/CS/OS/04. 프로세스와 스케줄러의 이해.md
@@ -101,3 +101,18 @@
 * Ready State Queue
 * Running State Queue
 * Block State Queue
+
+---
+
+## 선점형과 비선점형 스케쥴러
+
+#### 선점형 스케쥴러 (Preemptive Scheduling)
+* 하나의 프로세스가 다른 프로세스 대신에 프로세서 (CPU)를 차지할 수 있다.
+* 프로세스 running 중에 스케쥴러가 이를 중단시키고, 다른 프로세스로 교체 가능
+
+
+#### 비선점형 스케쥴러 (Non-preemptive Scheduling)
+* 하나의 프로세스가 끝나지 않으면 다른 프로세스는 CPU를 사용할 수 없다.
+* 프로세스가 **자발적**으로 blocking 상태로 들어가거나, 실행이 끝났을 때만, 다른 프로세스로 교체가 가능하다.
+
+![](images/04_06.png)
