--- a/CS/OS/05. 인터럽트.md
+++ b/CS/OS/05. 인터럽트.md
@@ -13,3 +13,45 @@
 * 예외 상황 핸들링
   * CPU가 프로그램을 실행하고 있을 때, 입출력 하드웨어 등의 장치나 또는 예외상황이 발생한 경우, CPU가 해당 처리를 할 수 있도록 CPU에 알려줘야 한다.
 
+<br />
+
+## 인터럽트 처리 예
+* CPU가 프로그램을 실행하고 있을 때, 입출력 하드웨어드  등의 장치 이슈 발생
+  * Ex) 파일 처리가 끝났다는 것을 운영체제에 알려주기 → 운영체제는 해당 프로세스를 block state에서 실행 대기(ready) 상태로 프로세스 상태 변경
+* CPU가 프로그램을 실행하고 있을 때, 예외 상황이 발생
+  * Ex) 0으로 나누는 게산이 발생, 예외 상황을 운영체제에 알려주기 → 운영체제가 해당 프로세스 실행 중지/에러 표시
+
+<br />
+
+## 이벤트와 인터럽트
+* 인터럽트는 일종의 이벤트라고 불린다.
+* 이벤트에 맞게 운영체제가 처리한다.
+
+<br />
+
+## 주요 인터럽트 (Interrupt)
+1. Divide-by-Zero Interrupt
+   * 계산하는 코드에서 0으로 나누는 코드 실행 시
+2. 타이머 인터럽트
+   * 하드웨어로 부터 일정 시간마다 타이머 인터럽트를 운영체제에 알려준다.
+   * 선점형 스케쥴러를 위해 필요하다.
+3. 입출력(IO) 인터럽트
+   * Ex) 프린터, 키보드, 마우스, 저장매체 (SSD 등)
+
+<br />
+
+## 인터럽트 종류
+#### 내부 인터럽트
+* 소프트웨어 인터럽트라고도 한다.
+* 주로 프로그램 내부에서 잘못된 명렁 또는 잘못된 데이터 사용 시 발생 (예외상황)
+  * 0으로 나누었을 경우
+  * 사용자 모드에서 허용되지 않은 명령 또는 공간 접근 시
+  * 계산 결과가 Overflow/Underflow 날 경우
+
+#### 외부 인터럽트
+* 하드웨어 인터럽트라고도 한다.
+* 주로 하드웨어에서 발생하는 이벤트 (프로그램 외부)
+  * 전원 이상
+  * 기계 문제
+  * 키보드 등 IO 관련 이벤트
+  * Timer 이벤트
