:memo: [OS] 05. 인터럽트 _ 인터럽트 내부 동작

--- a/CS/OS/05. 인터럽트.md
+++ b/CS/OS/05. 인터럽트.md
@@ -55,3 +55,54 @@
   * 기계 문제
   * 키보드 등 IO 관련 이벤트
   * Timer 이벤트
+
+<br />
+
+## 시스템 콜 인터럽트
+* 시스템 콜 실행을 위해서는 강제로 코드에 인터럽트 명령을 넣어, CPU에 실행시켜야 한다.
+
+#### 시스템 콜 실제 코드
+```
+mov eax, [시스템 콜 번호]
+mov ebx, [인자 값]
+int [op code, 시스템 콜: 0x80 고정]
+```
+* eax 레지스터어 시스템 콜 번호를 넣는다.
+* ebx 레지스터에는 시스템 콜에 해당하는 인자값을 넣는다.
+* 스프트웨어 인터럽트 명령을 호출하면서 0x80 값을 넘겨준다.
+  1. CPU는 사용자 모드를 커널 모드로 바꿔준다.
+  2. IDT(Interrupt Descriptor Table)에서 0x80에 해당하는 주소(함수)를 찾아서 실행한다.
+  3. system_call() 함수에서 eax로부터 시스템 콜 번호를 찾아서, 해당 번호에 맞는 시스템콜 함수로 이동한다.
+  4. 해당 시스템 콜 함수 실행 후, 다시 커널 모드에서 사용자 모드로 변경하고, 다시 해당 프로세스 다음 코드를 진행한다.
+
+![](images/05_01.png)
+
+<br />
+
+## 사용자/커널 모드와 프로세스, 인터럽트
+
+![](images/05_02.png)
+
+<br />
+
+## 인터럽트와 IDT
+
+#### IDT(Interrupt Descriptor Table)
+* 인터럽트 각각 번호와 실행 코드(운영체제 내부 코드)를 가리키는 주소가 기록되어 있다.
+* 컴퓨터 부팅 시 운영체제가 기록한다.
+* IDT에는 0x80 → system_call() 와 같은 정보가 기록되어 있다.
+
+#### 리눅스 예
+* 0 ~ 31 : 예외 상황 인터럽트 (일부는 정의안된 채로 남겨져 있다.)
+* 32 ~ 47 : 하드웨어 인터럽트 (주변 장치 종류/갯수에 따라 변경 가능)
+* 128 : 시스템 콜
+
+<br />
+
+## 인터럽트와 프로세스
+1. 프로세스 실행 중 인터럽트 발생
+2. 현재 실행 중인 프로세스 중단
+3. 인터럽트 처리 함수 실행 (운영체제, 커널모드)
+4. 실행 중이던 현 프로세스 재실행
+
+![](images/05_03.png)
