:memo: [OS] 06. 프로레스와 컨텍스트 스위칭 (프로세스 구조와 컴퓨터 구조)

--- a/CS/OS/06. 프로세스와 컨텍스트 스위칭.md
+++ b/CS/OS/06. 프로세스와 컨텍스트 스위칭.md
@@ -7,3 +7,11 @@
  * HEAP: 코드에서 동적으로 만들어지는 데이터
 
 ![](images/06_01.png)
+
+
+
+## 프로세스 구조와 컴퓨터 구조
+* PC (Program Counter)
+* SP (Stack Pointer)
+* EBP : 함수가 호출된 최상단 Stack Pointer
+  * 다음 주소는 함수 return address 
