--- a/CS/OS/06. 프로세스와 컨텍스트 스위칭.md
+++ b/CS/OS/06. 프로세스와 컨텍스트 스위칭.md
@@ -3,6 +3,8 @@
  ## 프로세스 구조
  * CODE(text): 컴파일 된 소스 코드 
  * DATA: 변수/초기화된 데이터
+   * BSS: 초기화되지 않은 전역변수
+   * DATA: 초기 값이 있는 전역변수
  * STACK: 임시 데이터 (함수 호출, 로컬 별수 등)
  * HEAP: 코드에서 동적으로 만들어지는 데이터
 
