:memo: [OS] 10. 페이징 시스템(다중 단계 페이징 시스템, 페이징 시스템 장점)

--- a/CS/OS/10. 페이징 시스템.md
+++ b/CS/OS/10. 페이징 시스템.md
@@ -51,3 +51,34 @@
 * PCB 등에서 해당 페이지 테이블에 접근이 가능하고, 관련 정보는 물리 메모리에 적재된다.
 * 프로세스 구동 시, 해당 페이지 테이블의 base 주소가 별도 레지스터에 저장된다. (CR3)
 * CPU가 가상 주소 접근 시, MMU가 페이지 테이블 base 주소를 접근해서, 물리 주소를 가져온다.
+
+<br />
+
+## 다중 단계 페이징 시스템
+* 페이징 정보를 단계를 나누어 실행한다.
+* 필요없는 페이지는 생성하지 않으면, 공간 절약이 가능하다.
+
+* 페이지 번호를 나타내는 bit를 구분해서, 단계를 나눈다. (리눅스는 3단계, 최근 4단계)
+
+![](images/10_04.png)
+
+<br />
+
+## MMU와 TLB(컴퓨터 구조)
+
+![](images/10_05.png)
+
+* MMU가 물리 주소를 확인하기 위해, 매번 메모리를 갔다와야 한다.
+
+![](images/10_06.png)
+
+* **TLB** (Translation Lookaside Buffer): 페이지 정보 캐쉬
+
+<br />
+
+## 페이징 시스템과 공유 메모리
+* 프로세스 간 동일한 물리 주소를 가리킬 수 있다. → 공간 절약, 메모리 할당 시간 절약
+  ![](images/10_07.png)
+
+* 물리 주소에 데이터 수정 시도 시, 물리 주소를 복사할 수 있다. (copy-on-write)
+  ![](images/10_08.png)
