:memo: [OS] 10. 페이징 시스템 (페이지 폴트, 페이지 교체 알고리즘)

--- a/CS/OS/10. 페이징 시스템.md
+++ b/CS/OS/10. 페이징 시스템.md
@@ -82,3 +82,63 @@
 
 * 물리 주소에 데이터 수정 시도 시, 물리 주소를 복사할 수 있다. (copy-on-write)
   ![](images/10_08.png)
+
+<br />
+
+## 요구 페이징 (Demand Paging / Demanded Paging)
+* 프로세스 모든 데이터를 메모리로 적재하지 않고, 실행 중 필요한 시점에서만 메모리로 적재한다.
+* 선행 페이징(anticipatory paging / prepaging)의 반대 개념이다.
+  * 미리 프로세스 관련 모든 데이터를 메모리에 올려놓고 실행하는 기법
+* 더 이상 필요하지 않은 페이지 프레임은 다시 저장 매체에 저장한다. (**페이지 교체 알고리즘 필요**)
+
+<br />
+
+## 페이지 폴트
+* 어떤 페이지가 실제 물리 메모리에 없을 때 나타나는 인터럽트
+* 운영체제가 page fault가 일어나면, 해당 페이지를 물리 메모리에 올린다.
+* 페이지 폴트가 자주 일어나게 되면, 실행하기 전 해당 페이지를 물리 메모리에 올려야 하기 때문에 시간이 오래 걸린다.
+
+##### 페이지 폴트와 인터럽트
+
+![](images/10_09.png)
+
+<br />
+
+## 페이지 교체 정책 (page replacement policy)
+* 운영체제가 특정 페이지를 물리 메모리에 올리려고 하는데, 물리 메모리가 다 차있는 경우 기존 페이지 중 하나를 물리 메모리에서 저장 매체로 내리고(저장), 새로운 페이지를 해당 물리 메모리 공간에 올린다.
+
+### 페이지 교체 알고리즘
+
+#### FIFO (First In First Out)
+* 가장 먼저 들어온 페이지를 내린다.
+
+<br />
+
+#### OPT (최적 페이지 알고리즘, OPTime)
+* 앞으로 가장 오랫동안 사용하지 않을 페이지를 내린다.
+* 일반 OS에서는 구현이 불가능하다.
+
+<br />
+
+#### LRU (Least Recently Used) 
+* 가장 오래 전에 사용 된 페이지를 교체한다.
+* OPT 교체 알고리즘 구현이 불가능하므로, 과거 기록을 기반으로 시도하는 알고리즘.
+
+<br />
+
+#### LFU (Least Frequently Used)
+* 가장 적게 사용된 페이지를 내리자.
+
+<br />
+
+#### NUR (Not Used Recently)
+* 최근에 사용하지 않은 페이지부터 교체하는 기법
+* 각 페이지마다 참조 비트(R), 수정 비트(M)을 둔다. (R, M)
+  * (0, 0), (0, 1), (1, 0), (1, 1) 순으로 페이지를 교체한다.
+
+<br />
+
+## 스레싱 (Thrashing)
+* 반복적으로 페이지 폴트가 발생하여, 과도하게 페이지 교체 작업이 일어나 실제로는 아무일도 못하는 상황
+
+![](image/../images/10_10.png)
