--- a/CS/OS/10. 페이징 시스템.md
+++ b/CS/OS/10. 페이징 시스템.md
@@ -142,3 +142,28 @@
 * 반복적으로 페이지 폴트가 발생하여, 과도하게 페이지 교체 작업이 일어나 실제로는 아무일도 못하는 상황
 
 ![](image/../images/10_10.png)
+
+<br />
+
+## 세그멘테이션 기법
+* 가상 메모리를 서로 크기가 다른 논리적 단위인 세그먼트(Segment)로 분할한다.
+  * 페이징 기법에서는 가상 메모리를 같은 크기의 불록으로 분할한다.
+
+* 세그먼트 가상 주소 : v = (s, d)
+  * s: 세그먼트 번호
+  * d: 블록 내 세그먼트의 변위
+
+![](images/10_11.png)
+
+* 세그멘테이션은 크기가 다른 semgent 단위로 물리 메모리에 로딩한다.
+
+![](images/10_12.png)
+
+#### 내부 단편화 (페이지 기법)
+* 페이지 블록만큼 데이터가 딱 맞게 채워져있지 않을 때 공간 낭비가 되는 경우
+
+#### 외부 단편화 (세그멘테이션 기법)
+* 물리 메모리가 원하는 연속된 크기의 메모리를 제공해주지 못하는 경우
+
+#### 세그멘테이션/페이징 모두 하드웨어 지원이 필요하다.
+* 다양한 컴퓨터 시스템에 이식성을 중요시하는 리눅스는 페이징 기법을 기반으로 구현되어 있다.
