--- a/정보처리기사/필기/1-1. 요구사항 확인.md
+++ b/정보처리기사/필기/1-1. 요구사항 확인.md
@@ -10,6 +10,7 @@
 * 개발자는 문제의 유형이나 개발 방법 등에 따라 특정 모형을 선택하여 사용할 수 있고, 개별적인 모형을 사용할 수 있다.
 * 일반적으로 사용되는 것으로는 폭포수 모형, 프로토타입 모형, 나선형 모형, 애자일 모형 등이 있다.
 
+<br />
 
 ### 폭포수 모형 (Waterfall Model)
 * 소프트웨어 개발도 이전 단계로 돌아갈 수 없다는 전제하에 각 단계를 확실히 매듭짓고, 그 결과를 철저하게 검토하여 승인 과정을 거친 후에 다음 단계를 진행하는 개발 방법론이다.
@@ -19,7 +20,9 @@
 * 각 단계가 끝난 후에는 다음 단계를 수행하기 위한 결과물이 명확하게 산출되어야 한다.
 * 두 개 이상의 과정이 병행하여 수행되지 않는다.
 
-#### 타당성 검토 → 계획 → 요구 분석 → 설계 → 구현(코딩) → 시험(검사) → 유지 보수
+> 타당성 검토 → 계획 → 요구 분석 → 설계 → 구현(코딩) → 시험(검사) → 유지 보수
+
+<br />
 
 ### 프로토타입 모형(Prototype Mode, 원형 모형)
 * 요구 사항을 정확하게 파악하기 위해 실제 개발될 소프트웨어에 대한 견본(시제)품(Prototype)을 만들어 최종 결과물을 예측하는 모형이다.
@@ -27,7 +30,9 @@
 * 시스템의 일부 혹은 시스템의 모형을 만드는 과정으로서 요구된 소프트웨어를 구현하는데, 이는 추후 구현 단계에서 사용될 골격 코드가 된다.
 * 소프트웨어 개발이 완료된 시점에서 오류가 발견되는 폭포수 모형의 단점을 보안하기 위한 모형이다.
 
-#### 요구 수집 → 빠른 설계 → 프로토타입 구축 → 고객 평가 → 프로토타입 조정 → 구현 → 처음으로
+> 요구 수집 → 빠른 설계 → 프로토타입 구축 → 고객 평가 → 프로토타입 조정 → 구현 → 처음으로
+
+<br />
 
 ### 나선형 모형(Spiral Model, 점진적 모형)
 * 보헴(Boehm)이 제안한 것이다.
@@ -36,7 +41,9 @@
 * 개발하면서 발생할 수 있는 위험을 관리하고 최소화하는 것을 목적으로 한다.
 * 점진적으로 개발 과정이 반복되어, 누락되거나 추가된 요구사항을 첨가할 수 있고, 정밀하며, 유지 보수 과정이 필요 없다.
 
-#### 계획 수립 → 위험 분서 → 개발 및 검증 → 고객 평가 → 처음으로
+> 계획 수립 → 위험 분서 → 개발 및 검증 → 고객 평가 → 처음으로
+
+<br />
 
 ### 애자일 모형 (Agile Model)
 * 고객의 요구사항 변화에 유옇나헥 대응할 수 있도록 일정한 주기를 반복하면서 개발 과정을 진행한다.
@@ -45,14 +52,22 @@
 * 스프린트(Sprint) / 인터레이션(Iteration)이라고 불리는 짧은 개발 주기를 반복하며, 반복되는 주기마다 만들어지는 결과물에 대한 고객의 평가와 요구를 적극 수용한다.
 * 각 개발 주기에는 고객이 요구사항에 우선순위를 부여하여 개발 작업을 진행한다.
 * 소규모 프로젝트, 고도로 숙달된 개발자, 급변하는 요구 사항에 적합하다.
-* Ex) 스크럼(Scrum), XP(eXtream Programming), 칸반(Kanban), Lean, 크리스탈(Crystal), ASD(Adaptive Software Development), 기능 중심 개발(FDD; Feature Driven Development) ..
+* Ex) 스크럼(Scrum), XP(eXtream Programming), 칸반(Kanban), Lean, 크리스탈(Crystal), ASD(Adaptive Software Development), 기능 중심 개발(FDD; Feature Driven Development) , DSDM(Dynamic System Development), DAD(Disciplined Agile Delivery) 등 …
 
+**에자일 4가지 핵심 가치**
+1. 프로세스와 도구보다는 개인과 상호작용에 더 가치를 둔다.
+2. 방대한 문서보다는 실행되는 SW에 더 가치를 둔다.
+3. 계약 협상보다는 고객과 협업에 더 가치를 둔다.
+4. 계획을 따르기 보다는 변화에 반응하는 것에 더 가치를 둔다.
 
+<br />
 
+### 소프트웨어 공학 (SE; Software Engineering)
+* 소프트웨어의 위기를 극복하기 위한 방안으로 연구된 학문
+* 여러 가지 방법론과 도구, 관리 기법들을 통해 소프트웨어 품질과 생산성을 향상시킬 목적으로 한다.
 
+**소프트웨어의 기본 원칙**
+* 현대적인 프로그래밍 기술을 계속적으로 적용해야 한다.
+* 개발된 소프트웨어의 품질이 유지되도록 지속적으로 검증해야 한다.
+* 소프트웨어 개발 관련 사항 및 결과에 대한 명확한 기록을 유지해야 한다.
 
-
-
-* 소프트웨어 생명 주기를 표현하는 형태를 소프트웨어 생명 주기 모형(소프트웨어 프로세스 모형, 소프트웨어 공학 패러다임)이라고 한다.
-* 
-* 
